Extensions: Only display host name for the overridden home and start-up pages.

Currently, the full path is shown for the home and start-up settings override
permissions. This makes the dialog UI look badly formatted and
incomprehensible. This CL changes the dialogs to only show the host name for
the overridden home and start-up pages. Existing tests are also modified.

BUG=670890
TEST=On Mac(trunk only) or Windows, open
https://chrome.google.com/webstore/detail/msn-homepage/ibflkkanbidceofpmolhpijgminhbmnm.
Click on Add to Chrome. Ensure only the host name is shown (without the www
prefix) for the new home and start-up page, on the dialog which shows up.

Review-Url: https://codereview.chromium.org/2676393002
Cr-Commit-Position: refs/heads/master@{#448805}

Former-commit-id: 0fdd4984f81bebc66dc2c36e4336f60328802ff9