chrome/common/extensions/permissions/settings_override_permission_unittest.cc
@@ -49,7 +49,7 @@ class SettingsOverridePermissionTest : public ChromeManifestTest {
     std::unique_ptr<base::DictionaryValue> settings_override(
         new base::DictionaryValue);
     if (flags & kHomepage)
-      settings_override->SetString("homepage", "http://www.google.com");
+      settings_override->SetString("homepage", "http://www.google.com/home");
     if (flags & kStartupPages) {
       std::unique_ptr<base::ListValue> startup_pages(new base::ListValue);
       startup_pages->AppendString("http://startup.com/startup.html");
@@ -88,7 +88,7 @@ TEST_F(SettingsOverridePermissionTest, HomePage) {
 #if defined(OS_WIN) || defined(OS_MACOSX)
   EXPECT_TRUE(permission_set.HasAPIPermission(APIPermission::kHomepage));
   VerifyOnePermissionMessage(extension->permissions_data(),
-                             "Change your home page to: google.com/");
+                             "Change your home page to: google.com");
 #else
   EXPECT_FALSE(permission_set.HasAPIPermission(APIPermission::kHomepage));
 #endif
@@ -104,9 +104,8 @@ TEST_F(SettingsOverridePermissionTest, StartupPages) {
 
 #if defined(OS_WIN) || defined(OS_MACOSX)
   EXPECT_TRUE(permission_set.HasAPIPermission(APIPermission::kStartupPages));
-  VerifyOnePermissionMessage(
-      extension->permissions_data(),
-      "Change your start page to: startup.com/startup.html");
+  VerifyOnePermissionMessage(extension->permissions_data(),
+                             "Change your start page to: startup.com");
 #else
   EXPECT_FALSE(permission_set.HasAPIPermission(APIPermission::kStartupPages));
 #endif
